test/invalid/from_import_noexist.py
from . import not_existing_module